--- a/ClubSimObjC/Home Page/HomePageTableViewCell.xib
+++ b/ClubSimObjC/Home Page/HomePageTableViewCell.xib
@@ -18,26 +18,27 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="HomePageTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="190"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="205"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="189.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="205"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="B3M-SU-YVL">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="130"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="140"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="130" id="MUp-hU-D08"/>
+                            <constraint firstAttribute="height" constant="140" id="MUp-hU-D08"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Game Pack" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VqK-ZK-Bbi">
-                        <rect key="frame" x="142.5" y="135" width="89.5" height="21"/>
+                        <rect key="frame" x="142.5" y="150" width="89.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yya-5x-wcv">
-                        <rect key="frame" x="3" y="156" width="370" height="31.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yya-5x-wcv">
+                        <rect key="frame" x="3" y="171" width="370" height="31.5"/>
                         <string key="text">《Tian Long Ba Bu Mobile》、《Lineage2 Revolution》、《Clash of Kings - COK》、《Arena of Valor》#UnleashTheMagicOfClubSIM
 4 mobile games are available now, enjoy free local data usage!</string>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="9"/>
@@ -46,17 +47,19 @@
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="yya-5x-wcv" secondAttribute="bottom" constant="2" id="Dlg-nM-kep"/>
                     <constraint firstItem="yya-5x-wcv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="3" id="OSI-9z-Vmx"/>
                     <constraint firstItem="B3M-SU-YVL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Xrb-Ys-krt"/>
                     <constraint firstItem="yya-5x-wcv" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="ank-Wr-G4H"/>
                     <constraint firstItem="VqK-ZK-Bbi" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="dNY-g9-yK1"/>
                     <constraint firstAttribute="trailing" secondItem="yya-5x-wcv" secondAttribute="trailing" constant="2" id="gCV-Hl-vuh"/>
-                    <constraint firstItem="VqK-ZK-Bbi" firstAttribute="top" secondItem="B3M-SU-YVL" secondAttribute="bottom" constant="5" id="hPI-cA-SFc"/>
+                    <constraint firstItem="VqK-ZK-Bbi" firstAttribute="top" secondItem="B3M-SU-YVL" secondAttribute="bottom" constant="10" id="hPI-cA-SFc"/>
                     <constraint firstAttribute="trailing" secondItem="B3M-SU-YVL" secondAttribute="trailing" id="nsC-f6-0vf"/>
                     <constraint firstItem="B3M-SU-YVL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="pNJ-EQ-p5c"/>
                     <constraint firstItem="yya-5x-wcv" firstAttribute="top" secondItem="VqK-ZK-Bbi" secondAttribute="bottom" id="tFp-Ef-wP6"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
                 <outlet property="descLbl" destination="yya-5x-wcv" id="Jf0-2F-tHe"/>
